fix: update movie title from 同窗之爱 to 同窗的爱

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                 votes: "38k"
             },
             {
-                title: "同窗之爱",
+                title: "同窗的爱",
                 engTitle: "Show Me Love",
                 year: "1998",
                 director: "卢卡斯·穆迪森",
