--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
                                 <span class="text-[#f5c518] font-bold text-sm">${m.imdb}</span>
                             </div>
                             <div class="absolute bottom-0 left-0 w-full p-4 bg-gradient-to-t from-[#F2F2F2]/20 to-transparent">
-                                <span class="text-[#F2F2F2] text-xs font-bold tracking-widest uppercase opacity-50 group-hover:opacity-100 transition-opacity duration-500">NO.0${idx+1}</span>
+                                <span class="text-[#F2F2F2] text-xs font-bold tracking-widest uppercase opacity-50 group-hover:opacity-100 transition-opacity duration-500">NO.${idx+1}</span>
                             </div>
                         </div>
                         <div class="flex-1 space-y-4 pt-2">
@@ -1173,7 +1173,7 @@
                 restMovies.forEach((m, idx) => {
                     restHtml += `
                         <tr class="hover:bg-[#F2F2F2]/5 transition-colors duration-300">
-                            <td class="py-4 opacity-50 font-mono text-xs">0${idx + 4}</td>
+                            <td class="py-4 opacity-50 font-mono text-xs">${idx + 4}</td>
                             <td class="py-4 font-medium tracking-wide">${m.title}</td>
                             <td class="py-4 opacity-60 font-mono text-xs">${m.year}</td>
                         </tr>
